--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2073,21 +2073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "def p11(data_location):\n",
-    "    df = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/main/data/boston-TMAX.tsv\", sep=\"\\t\")\n",
-    "    df['tmax'] = df['value'] / 10\n",
-    "    return df[df['tmax'] >= 30]"
+    "   df = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/main/data/boston-TMAX.tsv\", sep=\"\\t\") \n",
+    "   return df[df['value'] / 10 >= 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2117,6 @@
        "      <th>mflag</th>\n",
        "      <th>qflag</th>\n",
        "      <th>sflag</th>\n",
-       "      <th>tmax</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2131,7 +2129,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>Z</td>\n",
-       "      <td>32.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -2142,7 +2139,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>Z</td>\n",
-       "      <td>33.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -2153,7 +2149,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>Z</td>\n",
-       "      <td>32.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -2164,7 +2159,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>Z</td>\n",
-       "      <td>31.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -2175,11 +2169,9 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>Z</td>\n",
-       "      <td>30.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2197,7 +2189,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>7</td>\n",
-       "      <td>30.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10606</th>\n",
@@ -2208,7 +2199,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>7</td>\n",
-       "      <td>30.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10607</th>\n",
@@ -2219,7 +2209,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>7</td>\n",
-       "      <td>32.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10608</th>\n",
@@ -2230,7 +2219,6 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>7</td>\n",
-       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10609</th>\n",
@@ -2241,31 +2229,30 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>7</td>\n",
-       "      <td>30.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1067 rows × 8 columns</p>\n",
+       "<p>1067 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          stations        date element  value mflag qflag sflag  tmax\n",
-       "5      USC00198368  1994-07-06    TMAX    328                 Z  32.8\n",
-       "6      USC00198368  1994-07-07    TMAX    333                 Z  33.3\n",
-       "7      USC00198368  1994-07-08    TMAX    322                 Z  32.2\n",
-       "8      USC00198368  1994-07-09    TMAX    311                 Z  31.1\n",
-       "9      USC00198368  1994-07-10    TMAX    306                 Z  30.6\n",
-       "...            ...         ...     ...    ...   ...   ...   ...   ...\n",
-       "10605  USC00198368  2023-09-06    TMAX    306                 7  30.6\n",
-       "10606  USC00198368  2023-09-07    TMAX    306                 7  30.6\n",
-       "10607  USC00198368  2023-09-08    TMAX    328                 7  32.8\n",
-       "10608  USC00198368  2023-09-09    TMAX    300                 7  30.0\n",
-       "10609  USC00198368  2023-09-10    TMAX    300                 7  30.0\n",
+       "          stations        date element  value mflag qflag sflag\n",
+       "5      USC00198368  1994-07-06    TMAX    328                 Z\n",
+       "6      USC00198368  1994-07-07    TMAX    333                 Z\n",
+       "7      USC00198368  1994-07-08    TMAX    322                 Z\n",
+       "8      USC00198368  1994-07-09    TMAX    311                 Z\n",
+       "9      USC00198368  1994-07-10    TMAX    306                 Z\n",
+       "...            ...         ...     ...    ...   ...   ...   ...\n",
+       "10605  USC00198368  2023-09-06    TMAX    306                 7\n",
+       "10606  USC00198368  2023-09-07    TMAX    306                 7\n",
+       "10607  USC00198368  2023-09-08    TMAX    328                 7\n",
+       "10608  USC00198368  2023-09-09    TMAX    300                 7\n",
+       "10609  USC00198368  2023-09-10    TMAX    300                 7\n",
        "\n",
-       "[1067 rows x 8 columns]"
+       "[1067 rows x 7 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
