DX602 Week 8 - N. Jones - 8_2

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2073,20 +2073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "def p11(data_location):\n",
-    "   df = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/main/data/boston-TMAX.tsv\", sep=\"\\t\") \n",
-    "   return df[df['value'] / 10 >= 30]"
+    "def p11(data_location=\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/main/data/boston-TMAX.tsv\"):\n",
+    "    df = pd.read_csv(data_location, sep=\"\\t\")\n",
+    "    return df[df['value'] / 10 >= 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
        "[1067 rows x 7 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
